--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -9,6 +9,7 @@
 :root{
     --primary-color:#9B59B6;
     --secondary-color: #181818;
+    --third-color: #F16D95;
 }
 
 body{
@@ -205,7 +206,7 @@ main{
 .tag{
     color:white;
     padding:10px 20px;
-    background-color: orange;
+    background-color: var(--third-color);
     border-radius: 50px;
     margin:5px;
     display:inline-block;
@@ -248,13 +249,13 @@ main{
 .current{
     padding: 10px 20px;
     border-radius: 50%;
-    border: 5px solid orange;
+    border: 5px solid var(--third-color);
     font-size: 20px;
     font-weight: 600;
 }
 
 .know-more{
-    background-color: orange;
+    background-color: var(--third-color);
     color:white;
     font-size: 16px;
     font-weight: bold;
