--- a/frontend/css/user_list.css
+++ b/frontend/css/user_list.css
@@ -1,7 +1,7 @@
 .user-container{
     position: relative;
     width: 1200px;
-    height: 660px;
+    height: 680px;
     margin-top: 60px;
 }
 
@@ -20,11 +20,56 @@
     margin: 10px 20px;
     display: flex;
     justify-content: center;
-    align-items: left;
+    align-items: center;
     flex-direction: column;
 }
 
 .user-info h3{
     color: #fff;
     font-size: 2rem;
+}
+
+.users-table{
+    border-collapse: collapse;
+    margin: 25px 0;
+    font-size: 1rem;
+    min-width: 600px;
+    border-radius: 5px 5px 0 0;
+    overflow: hidden;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+}
+
+.users-table thead tr{
+    background-color: var(--third-color);
+    color: white;
+    text-align: left;
+    font-weight: bold;
+}
+
+.users-table th, .users-table td{
+    padding: 12px 15px;
+}
+
+.users-table tbody tr{
+    border-bottom: 1px solid black;   
+    background-color: white; 
+}
+
+.users-table tbody tr:nth-of-type(even){
+    background-color: #f3f3f3;  
+}
+
+.users-table tbody tr:last-of-type{
+    border-bottom: 2px solid var(--third-color);
+}
+
+.user-action-btn{
+    color: var(--third-color);
+    border: none;
+    cursor: pointer;
+    padding: 1px;
+    background: none;
+    font-family: inherit;
+    font-size: 0.8rem;
+
 }
