--- a/frontend/css/user_list.css
+++ b/frontend/css/user_list.css
@@ -1,6 +1,6 @@
 .user-container{
     position: relative;
-    width: 1200px;
+    width: 830px;
     height: 680px;
     margin-top: 60px;
 }
@@ -17,7 +17,7 @@
 }
 
 .user-info{
-    margin: 10px 20px;
+    margin: 5px 20px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,12 +26,21 @@
 
 .user-info h3{
     color: #fff;
-    font-size: 2rem;
+    font-size: 2.5rem;
+}
+
+.user-table{
+    margin: 20px 0;
+}
+
+.no-user-results{
+    color: white;
+    align-self: center;
 }
 
 .users-table{
     border-collapse: collapse;
-    margin: 25px 0;
+    margin: 10px 0;
     font-size: 1rem;
     min-width: 600px;
     border-radius: 5px 5px 0 0;
@@ -71,4 +80,35 @@
     background: none;
     font-family: inherit;
     font-size: 0.8rem;
+}
+
+.user-action-btn:hover{
+    color: var(--secondary-color);
+}
+
+.search_user{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 10px 0;
+}
+
+.searchUserBar{
+    background-color: transparent;
+    border: 2px solid var(--secondary-color);
+    padding:0.5rem 1rem;
+    border-radius: 50px;
+    font-size: 1.5rem;
+    color: #fff;
+    font-family: inherit;
+    margin: 10px 0 0;
+}
+
+.searchUserBar:focus{
+    outline:0;
+    background-color: var(--secondary-color);
+}
+
+.searchUserBar::placeholder{
+    color: #fff;
 }
